--- a/ChuckNorrisASP.NET/Views/Home/Index.cshtml
+++ b/ChuckNorrisASP.NET/Views/Home/Index.cshtml
@@ -2,8 +2,9 @@
 
 <br />
 
-<div class="text-center">
-    <img src="/Pics/chuck1.png" />
+<div class="mx-auto text-center" style="width: 200px;">
+    <img src="~/pics/chuck1.png" width="250"/>
+    @*<img src="@Model.PicPath" width="250" />*@
 </div>
 
 <br />
@@ -14,7 +15,7 @@
 
 <br />
 
-<div class="text-center">
+<div class="mx-auto text-center" style="width: 80%;">
     <h3>@Model.Value</h3>
 </div>
 
