made pic responsive

--- a/ChuckNorrisASP.NET/Views/Home/Index.cshtml
+++ b/ChuckNorrisASP.NET/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
 
 <br />
 
-<div class="mx-auto text-center" style="width: 200px;">
+<div class="mx-auto text-center image-fluid" style="width: 200px;">
     <img src="~/pics/chuck1.png" width="250"/>
     @*<img src="@Model.PicPath" width="250" />*@
 </div>
@@ -15,7 +15,7 @@
 
 <br />
 
-<div class="mx-auto text-center" style="width: 80%;">
+<div class="mx-auto text-center text-wrap" style="width: 80%;">
     <h3>@Model.Value</h3>
 </div>
 
