added gif to main page

--- a/ChuckNorrisASP.NET/Views/Home/Index.cshtml
+++ b/ChuckNorrisASP.NET/Views/Home/Index.cshtml
@@ -2,9 +2,11 @@
 
 <br />
 
-<div class="mx-auto text-center image-fluid" style="width: 200px;">
-    <img src="~/pics/chuck1.png" width="250"/>
+<div class="container text-center image-fluid">
+    @*<img src="~/pics/chuck1.png" width="250"/>*@
     @*<img src="@Model.PicPath" width="250" />*@
+    <iframe src="https://giphy.com/embed/BIuuwHRNKs15C" width="480" height="359" frameBorder="0" class="giphy-embed text-center"></iframe>
+
 </div>
 
 <br />
